- Fix class name conflicts - Update docs